[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ColorTexture.png" type="Texture" id=1]
[ext_resource path="res://scripts/ColorComponent.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Selected"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[node name="ColorComponent" type="TextureButton"]
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animator" type="AnimationPlayer" parent="."]
anims/Selected = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_ColorComponent_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ColorComponent_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ColorComponent_pressed"]
